src/css/input.css
@tailwind base;
@tailwind components;
@tailwind utilities;

body {
  background-color: #1e293b; /* Slate-900 */
  color: #e5e7eb; /* Slate-200 */
  font-family: "Inter", sans-serif;
}

.navbar-fixed {
  @apply fixed z-[99999] bg-slate-300 lg:bg-gray-900 bg-opacity-70 backdrop-blur-sm;
}

.hamburger-active > span:nth-child(1) {
  @apply rotate-45;
}

.hamburger-active > span:nth-child(2) {
  @apply scale-0;
}

.hamburger-active > span:nth-child(3) {
  @apply -rotate-45;
}

.cursor {
  font-family: "Roboto Mono", monospace;
  display: inline-block;
  animation: blink 1s step-end infinite;
}

@keyframes blink {
  from,
  to {
    opacity: 1;
  }
  50% {
    opacity: 0;
  }
}

